--- a/auth-internal/build.gradle
+++ b/auth-internal/build.gradle
@@ -5,11 +5,13 @@ buildscript {
   }
   dependencies {
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
   }
 }
 
 plugins {
-    id "java-library"
+  id 'java'
+  id "java-library"
 }
 
 dependencies {
