--- a/databus-connector/build.gradle
+++ b/databus-connector/build.gradle
@@ -1,19 +1,24 @@
-apply plugin: 'com.google.protobuf'
-
 buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
   }
+
   dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
   }
 }
 
+plugins {
+  id "java-library"
+}
+
+apply plugin: 'com.google.protobuf'
+
 dependencies {
-  implementation project(':grpc-common')
-  implementation project(':auth-connector')
-  implementation project(':streaming-common')
+  api project(':auth-connector')
+  api project(':streaming-common')
 
   implementation     group: 'org.springframework.boot',            name: 'spring-boot-starter-jersey',     version: springBootVersion
   implementation     group: 'net.bytebuddy',                       name: 'byte-buddy',                     version: '1.10.11'
