--- a/flow-api/build.gradle
+++ b/flow-api/build.gradle
@@ -1,8 +1,17 @@
-apply plugin: 'java'
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url = "$repoUrl" }
+  }
+  dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+  }
+}
 
-repositories {
-  mavenCentral()
-  maven { url = "$repoUrl" }
+plugins {
+  id 'java'
+  id 'java-library'
 }
 
 jar {
