--- a/streaming-common/build.gradle
+++ b/streaming-common/build.gradle
@@ -1,15 +1,19 @@
-apply plugin: 'com.google.protobuf'
-apply plugin: 'java'
-
 buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
   }
   dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
   }
 }
+
+plugins {
+  id 'java'
+  id 'java-library'
+}
+apply plugin: 'com.google.protobuf'
 
 dependencies {
   implementation project(':grpc-common')
