--- a/usage-collection/build.gradle
+++ b/usage-collection/build.gradle
@@ -9,12 +9,15 @@ buildscript {
   }
 }
 
+
+plugins {
+  id "java-library"
+}
+
 apply plugin: 'com.google.protobuf'
 
 dependencies {
-  implementation project(':common')
-  implementation project(':streaming-common')
-  implementation project(':databus-connector')
+  api project(':databus-connector')
 
   implementation group: 'com.google.protobuf',          name: 'protobuf-java',        version: protobufVersion
 
