--- a/auth-internal-api/build.gradle
+++ b/auth-internal-api/build.gradle
@@ -5,10 +5,12 @@ buildscript {
     }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
     }
 }
 
 plugins {
+    id 'java'
     id "java-library"
 }
 
