--- a/authorization-common-api/build.gradle
+++ b/authorization-common-api/build.gradle
@@ -1,19 +1,19 @@
 buildscript {
     repositories {
-        maven { url = "$repoUrl" }
-        maven { url = "$springRepoUrl" }
         mavenCentral()
+        maven { url = "$repoUrl" }
     }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
     }
 }
 
 plugins {
+    id 'java'
     id "java-library"
 }
 
-apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
 
 jar {
