--- a/ccm-connector/build.gradle
+++ b/ccm-connector/build.gradle
@@ -1,19 +1,25 @@
-apply plugin: 'com.google.protobuf'
-
 buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
   }
   dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
   }
 }
 
+plugins {
+  id 'java'
+  id "java-library"
+}
+
+apply plugin: 'com.google.protobuf'
+
 dependencies {
   implementation group: 'com.google.protobuf',          name: 'protobuf-java',        version: protobufVersion
 
-  implementation project(':grpc-common')
+  api project(':grpc-common')
 
   implementation ("io.grpc:grpc-all:$grpcVersion") {
     exclude group: 'org.mockito'
