--- a/client-cm/build.gradle
+++ b/client-cm/build.gradle
@@ -1,14 +1,17 @@
-plugins {
-  id "java"
-  id "java-library"
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url = "$repoUrl" }
+  }
+  dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+  }
 }
 
-repositories {
-  maven { url = "$repoUrl" }
-  mavenCentral()
-  maven { url "https://cloudbreak-maven.s3.amazonaws.com/releases" }
-  maven { url "https://repo.spring.io/release" }
-  maven { url "https://plugins.gradle.org/m2/" }
+plugins {
+  id 'java'
+  id "java-library"
 }
 
 jar {
@@ -19,7 +22,7 @@ dependencies {
   implementation project(':common')
 
   api group: 'com.cloudera.api.swagger',                name: 'cloudera-manager-api-swagger',             version: cmClientVersion
-  implementation group: 'org.springframework',                     name: 'spring-aspects',                           version: springFrameworkVersion
+  api group: 'org.springframework',                     name: 'spring-aspects',                           version: springFrameworkVersion
 
   testImplementation (group: 'org.mockito', name: 'mockito-core', version: mockitoVersion) {
     exclude group: 'org.hamcrest'
