--- a/cloud-api/build.gradle
+++ b/cloud-api/build.gradle
@@ -1,9 +1,17 @@
-apply plugin: 'java'
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url = "$repoUrl" }
+  }
+  dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+  }
+}
 
-repositories {
-  maven { url = "$repoUrl" }
-  maven { url = "$springRepoUrl" }
-  mavenCentral()
+plugins {
+  id 'java'
+  id 'java-library'
 }
 
 jar {
@@ -13,9 +21,8 @@ jar {
 
 dependencies {
 
-  implementation project(":common")
-  implementation project(':common-model')
-  implementation project(':usage-collection')
+  api project(":common")
+  api project(':usage-collection')
 
   implementation            group: 'io.swagger',                 name: 'swagger-annotations',   version: swaggerVersion
 
