--- a/cloud-aws-native/build.gradle
+++ b/cloud-aws-native/build.gradle
@@ -1,24 +1,22 @@
-plugins {
-    id 'java'
-}
-
-repositories {
-  maven { url = "$repoUrl" }
-  maven { url = "$springRepoUrl" }
-  mavenCentral()
-}
-
-repositories {
+buildscript {
+  repositories {
     mavenCentral()
+    maven { url = "$repoUrl" }
+  }
+  dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+  }
 }
+
+plugins {
+  id 'java'
+  id 'java-library'
+}
+
 
 dependencies {
-  implementation project(':common')
-  implementation project(':cloud-api')
-  implementation project(':cloud-aws-common')
-  implementation project(':auth-connector')
-  implementation project(':cloud-reactor')
-  implementation project(':cloud-template')
+  api project(':cloud-aws-common')
 
   // mockito juniper depends on ByteBuddy 1.9.7, but hibernate use older version
   implementation group: 'net.bytebuddy',                 name: 'byte-buddy',                     version: '1.9.12'
