--- a/cluster-proxy/build.gradle
+++ b/cluster-proxy/build.gradle
@@ -2,11 +2,16 @@ buildscript {
   repositories {
     mavenCentral()
     maven { url = "$repoUrl" }
-    maven { url = "$springRepoUrl" }
   }
   dependencies {
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
   }
+}
+
+plugins {
+  id 'java'
+  id 'java-library'
 }
 
 apply plugin: 'io.spring.dependency-management'
