--- a/common-handlebar/build.gradle
+++ b/common-handlebar/build.gradle
@@ -1,11 +1,17 @@
-plugins {
-    id "java"
-    id "java-library"
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url = "$repoUrl" }
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+    }
 }
 
-repositories {
-    maven { url = "$repoUrl" }
-    mavenCentral()
+plugins {
+    id 'java'
+    id 'java-library'
 }
 
 jar {
