--- a/flow/build.gradle
+++ b/flow/build.gradle
@@ -16,10 +16,8 @@ jar {
 }
 
 dependencies {
-  implementation project(':common')
   implementation project(':flow-api')
   implementation project(':authorization-common')
-  implementation project(':auth-connector')
 
   // mockito juniper depends on ByteBuddy 1.9.7, but hibernate use older version
   implementation group: 'net.bytebuddy',                         name: 'byte-buddy',                     version: '1.9.12'
@@ -27,9 +25,9 @@ dependencies {
   implementation group: 'javax.inject',                          name: 'javax.inject',                   version: '1'
   implementation group: 'javax.transaction',                     name: 'javax.transaction-api',          version: '1.3'
 
-  implementation group: 'org.springframework',                   name: 'spring-beans',                   version: springFrameworkVersion
-  implementation group: 'org.springframework',                   name: 'spring-context',                 version: springFrameworkVersion
-  implementation group: 'org.springframework.boot',              name: 'spring-boot-starter-data-jpa',   version: springBootVersion
+  api group: 'org.springframework',                   name: 'spring-beans',                   version: springFrameworkVersion
+  api group: 'org.springframework',                   name: 'spring-context',                 version: springFrameworkVersion
+  api group: 'org.springframework.boot',              name: 'spring-boot-starter-data-jpa',   version: springBootVersion
   api group: 'org.springframework.statemachine',      name: 'spring-statemachine-core',       version: '1.0.1.RELEASE'
   implementation group: 'org.springframework.boot',              name: 'spring-boot-starter-quartz',     version: springBootVersion
 
