--- a/freeipa-client/build.gradle
+++ b/freeipa-client/build.gradle
@@ -1,13 +1,18 @@
-plugins {
-  id "java"
-  id "maven-publish"
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url = "$repoUrl" }
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+    }
 }
 
-repositories {
-  maven { url = "$repoUrl" }
-  mavenCentral()
-  maven { url "https://cloudbreak-maven.s3.amazonaws.com/releases" }
-  maven { url "https://plugins.gradle.org/m2/" }
+plugins {
+    id 'java'
+    id 'java-library'
+    id "maven-publish"
 }
 
 jar {
