--- a/node-status-monitor-client/build.gradle
+++ b/node-status-monitor-client/build.gradle
@@ -1,18 +1,22 @@
-apply plugin: 'com.google.protobuf'
-
 buildscript {
   repositories {
-    mavenLocal()
     mavenCentral()
     maven { url = "$repoUrl" }
   }
   dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
   }
 }
 
+plugins {
+  id 'java'
+  id 'java-library'
+}
+apply plugin: 'com.google.protobuf'
+
 dependencies {
-  implementation project(':common')
+  api project(':common')
   implementation ("io.grpc:grpc-all:$grpcVersion") {
     exclude group: 'org.mockito'
     exclude group: 'junit', module: 'junit'
