--- a/secret-engine/build.gradle
+++ b/secret-engine/build.gradle
@@ -1,22 +1,27 @@
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url = "$repoUrl" }
+  }
+  dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+  }
+}
+
 plugins {
   id 'java'
   id 'java-library'
-}
-
-group 'com.sequenceiq'
-
-repositories {
-  mavenCentral()
 }
 
 dependencies {
   implementation project(":common")
 
   implementation group: 'org.slf4j', name: 'slf4j-api', version: slf4jApiVersion
-  implementation group: 'org.springframework', name: 'spring-aspects', version: springFrameworkVersion
-  implementation group: 'org.springframework', name: 'spring-web', version: springFrameworkVersion
+  api group: 'org.springframework', name: 'spring-aspects', version: springFrameworkVersion
+  api group: 'org.springframework', name: 'spring-web', version: springFrameworkVersion
   implementation group: 'com.google.code.gson', name: 'gson'
-  implementation group: 'org.springframework', name: 'spring-context', version: springFrameworkVersion
+  api group: 'org.springframework', name: 'spring-context', version: springFrameworkVersion
   implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
   implementation group: 'javax.inject', name: 'javax.inject', version: '1'
   implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
