--- a/telemetry-common/build.gradle
+++ b/telemetry-common/build.gradle
@@ -1,12 +1,17 @@
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url = "$repoUrl" }
+  }
+  dependencies {
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+  }
+}
+
 plugins {
   id 'java'
   id 'java-library'
-}
-
-group 'com.sequenceiq'
-
-repositories {
-  mavenCentral()
 }
 
 dependencies {
