--- a/core/build.gradle
+++ b/core/build.gradle
@@ -310,19 +310,19 @@ dependencies {
   testImplementation (group: 'org.mockito',             name: 'mockito-core') {
     exclude group: 'org.hamcrest'
   }
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker'
-  testImplementation group: 'com.jayway.restassured',   name: 'rest-assured'
-  testImplementation group: 'com.jayway.restassured',   name: 'json-path'
-  testImplementation group: 'com.h2database',           name: 'h2'
-  testImplementation group: 'org.awaitility',           name: 'awaitility',          version: awaitilityVersion
-  testImplementation group: 'org.testcontainers',       name: 'postgresql',          version: testContainersVersion
-  testImplementation group: 'org.testcontainers',       name: 'junit-jupiter',       version: testContainersVersion
-  testImplementation group: 'org.assertj',       name: 'assertj-core',        version: assertjVersion
-  testImplementation group: "org.yaml",          name: "snakeyaml"
-  testImplementation group: 'org.hamcrest',      name: 'hamcrest',            version: hamcrestVersion
-  testImplementation group: 'com.fasterxml.jackson.core',name: 'jackson-databind', version: jacksonVersion
-  testImplementation group: "com.openpojo",                  name: "openpojo",                       version: openPojoVersion
+  testImplementation group: 'org.springframework.boot',   name: 'spring-boot-starter-test'
+  testImplementation group: 'org.springframework.boot',   name: 'spring-boot-starter-freemarker'
+  testImplementation group: 'com.jayway.restassured',     name: 'rest-assured'
+  testImplementation group: 'com.jayway.restassured',     name: 'json-path'
+  testImplementation group: 'com.h2database',             name: 'h2'
+  testImplementation group: 'org.awaitility',             name: 'awaitility',          version: awaitilityVersion
+  testImplementation group: 'org.testcontainers',         name: 'postgresql',          version: testContainersVersion
+  testImplementation group: 'org.testcontainers',         name: 'junit-jupiter',       version: testContainersVersion
+  testImplementation group: 'org.assertj',                name: 'assertj-core',        version: assertjVersion
+  testImplementation group: 'org.yaml',                   name: 'snakeyaml',           version: snakeYamlVersion
+  testImplementation group: 'org.hamcrest',               name: 'hamcrest',            version: hamcrestVersion
+  testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind',    version: jacksonVersion
+  testImplementation group: "com.openpojo",               name: "openpojo",            version: openPojoVersion
 }
 
 task execute(type: JavaExec) {
