--- a/redbeams/build.gradle
+++ b/redbeams/build.gradle
@@ -92,15 +92,15 @@ dependencies {
   testImplementation project(path: ':flow', configuration: 'tests')
 
   constraints {
-    implementation     group: 'org.yaml',                  name: 'snakeyaml',                      version: '1.23'
+    implementation     group: 'org.yaml',                  name: 'snakeyaml',                      version: snakeYamlVersion
     implementation     group: 'com.google.guava',          name: 'guava',                          version: guavaVersion
     implementation     group: 'com.google.code.gson',      name: 'gson',                           version: gsonVersion
     implementation     group: 'dnsjava',                   name: 'dnsjava',                        version: '2.1.7'
     implementation     group: 'io.springfox',              name: 'springfox-boot-starter',         version: swaggerSpringFoxVersion
     implementation     group: 'io.swagger',                name: 'swagger-jersey2-jaxrs',          version: swaggerVersion
     implementation     group: 'javax.xml.bind',            name: 'jaxb-api',                       version: '2.3.1'
-    runtimeOnly            group: 'com.sun.xml.bind',          name: 'jaxb-impl',                      version: '2.3.0'
-    runtimeOnly            group: 'org.glassfish.jaxb',        name: 'jaxb-runtime',                   version: '2.3.0'
+    runtimeOnly        group: 'com.sun.xml.bind',          name: 'jaxb-impl',                      version: '2.3.0'
+    runtimeOnly        group: 'org.glassfish.jaxb',        name: 'jaxb-runtime',                   version: '2.3.0'
     implementation     group: 'org.glassfish.jersey.core', name: 'jersey-server',                  version: '2.28'
     implementation     group: 'org.mybatis',               name: 'mybatis-migrations',             version: mybatisMigrationVersion
     implementation     group: 'org.postgresql',            name: 'postgresql',                     version: postgreSQLVersion
