--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -94,6 +94,9 @@ integrationtest:
     distroXUpgrade3rdPartyCurrentVersion: 7.2.7
     distroXUpgrade3rdPartyTargetVersion: 7.2.12
     imageCatalogUrl3rdParty: https://cloudbreak-imagecatalog.s3.amazonaws.com/v3-prod-cb-image-catalog.json
+  upgradeDatabaseServer:
+    originalDatabaseMajorVersion: 10
+    targetDatabaseMajorVersion: 11
   privateEndpointEnabled: false
 
   spot:
@@ -108,6 +111,7 @@ integrationtest:
   aws:
     govCloud: false
     multiaz: false
+    externalDatabaseSslEnforcementSupported: true
     region: eu-central-1
     location: eu-central-1
     availabilityZone: eu-central-1a
@@ -165,6 +169,7 @@ integrationtest:
   # azure parameters
   azure:
     availabilityZone:
+    externalDatabaseSslEnforcementSupported: true
     region: West US 2
     location: West US 2
     verticalScale:
@@ -227,6 +232,7 @@ integrationtest:
     baseimage:
       imageId:
     availabilityZone: europe-west2-a
+    externalDatabaseSslEnforcementSupported: false
     region: europe-west2
     location: europe-west2
     verticalScale:
