CB-17882 Integrate EBS consumption into datahub (create & terminate)
* Add cloud-consumption-api as new compile dependency for core
  service.
* Integrate EBS consumption schedule / unschedule invocations into stack
  create & terminate flows.
  * Enabled for DH clusters with Kudu only.
  * New states: com.sequenceiq.cloudbreak.core.flow2.stack.provision.
    StackCreationState.
    ATTACHED_VOLUME_CONSUMPTION_COLLECTION_SCHEDULING_STATE,
    com.sequenceiq.cloudbreak.core.flow2.stack.termination.
    StackTerminationState.
    ATTACHED_VOLUME_CONSUMPTION_COLLECTION_UNSCHEDULING_STATE .
  * New handlers: com.sequenceiq.cloudbreak.reactor.handler.consumption.
    AttachedVolumeConsumptionCollectionSchedulingHandler,
    com.sequenceiq.cloudbreak.reactor.handler.consumption.
    AttachedVolumeConsumptionCollectionUnschedulingHandler .
  * Just like for its environment
    (https://jira.cloudera.com/browse/CB-17216 / #12807, property
    environment.consumption.enabled) and datalake
    (https://jira.cloudera.com/browse/CB-17217 / #12940, property
    datalake.consumption.enabled) counterparts, consumption schedule /
    unschedule invocations are guarded by two checks: application
    property in `application.yml` (cb.consumption.enabled) and
    entitlement (CDP_SAAS). The properties are disabled by default in
    all cases and are enabled separately in CBD
    (https://jira.cloudera.com/browse/CB-18965) and helm charts
    (https://jira.cloudera.com/browse/CB-18768 /
    https://jira.cloudera.com/browse/CB-18954).
* Some code cleanup.
* Testing:
  * Manual testing in local CB.
  * Added new UT and updated existing ones.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -145,6 +145,10 @@ cb:
   redbeams:
     url: http://localhost:8087
     contextPath: /redbeams
+  consumption:
+    url: http://localhost:8099
+    contextPath: /consumption
+    enabled: false
   runtimes:
     latest: "7.2.16"
 
