CB-18895 Upgrade Protobuf and Guava
Housekeeping: reorganize Gradle properties
Speed up checkstyle (and make it work because now
it fails for generated proto classes) by skipping
all the generated files instead of suppressing the
audited warnings.

--- a/auth-distributor-connector/build.gradle
+++ b/auth-distributor-connector/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     maven { url = "$repoUrl" }
   }
   dependencies {
-    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
   }
 }
 
