--- a/cluster-dns-connector/build.gradle
+++ b/cluster-dns-connector/build.gradle
@@ -8,7 +8,7 @@ buildscript {
   }
   dependencies {
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
   }
 }
 
