--- a/auth-connector/build.gradle
+++ b/auth-connector/build.gradle
@@ -5,7 +5,7 @@ buildscript {
   }
   dependencies {
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
+    classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufPluginVersion}"
   }
 }
 
