--- a/gradle.properties
+++ b/gradle.properties
@@ -1,77 +1,113 @@
+# Gradle settings
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx2048m
 org.gradle.caching=true
 org.gradle.logging.level=lifecycle
 
-# Version definition
+# Version definitions
+## Gradle Build tools
+sonarVersion=3.3
+protobufPluginVersion=0.9.1
+
+## Spring
+caffeineVersion=2.8.1
 springBootVersion=2.5.12
+springDataJpaFrameworkVersion=2.4.2
+springFrameworkVersion=5.3.23
+springSecurityVersion=5.6.7
+
+## Reactor
+eventBusVersion=2.0.7.RELEASE
+
+## Polling
+dyngrPollingVersion=1.1.3
+
+## Rest API
+hibernateValidatorVersion=6.1.0.Final
+javaxActivationVersion=1.1.1
+javaxValidationVersion=2.0.1.Final
+jerseyCoreVersion=2.37
+swaggerVersion=1.6.2
+swaggerSpringFoxVersion=3.0.0
+
+## Network
+dnsjavaVersion=2.1.7
+httpClientVersion=4.5.10
+nettyVersion=4.1.77.Final
+okhttpVersion=3.14.9
+
+## Cloud SDKs
 awsSdkVersion=1.12.261
 azureClientAuthVersion=1.7.14
 azureSdkVersion=1.41.4
 azureStorageSdkVersion=8.4.0
-caffeineVersion=2.8.1
-eventBusVersion=2.0.7.RELEASE
-slf4jApiVersion=1.7.30
-logbackJsonClassicVersion=0.1.5
-guavaVersion=31.0.1-jre
-freemarkerVersion=2.3.30
-jacksonVersion=2.13.4
-springFrameworkVersion=5.3.23
-springSecurityVersion=5.6.7
-hibernateCoreVersion=5.4.25.Final
-hibernateValidatorVersion=6.1.0.Final
-jasyptVersion=1.9.2
-apacheCommonsLangVersion=3.8.1
+
+## Apache Commons, Utils
 apacheCommonsIoVersion=2.11.0
+apacheCommonsLangVersion=3.8.1
 apacheCommonsTextVersion=1.5
 apacheCommonsValidatorVersion=1.6
-mockitoVersion=3.6.28
-junitVersion=4.13.2
-junitJupiterVersion=5.7.0
-testContainersVersion=1.16.0
-testNgVersion=7.3.0
-awaitilityVersion=3.1.6
-assertjVersion=3.21.0
-jerseyCoreVersion=2.37
-swaggerVersion=1.6.2
-swaggerSpringFoxVersion=3.0.0
-bouncycastleVersion=1.70
-hadoopVersion=2.7.1
-postgreSQLVersion=42.3.7
-httpClientVersion=4.5.10
-cmClientVersion=7.6.0
-micrometerVersion=1.7.6
-openPojoVersion=0.8.12
 commonsCodecVersion=1.13
 commonsCollections4Version=4.4
-springDataJpaFrameworkVersion=2.4.2
+guavaVersion=31.1-jre
+
+## Logging
+logbackJsonClassicVersion=0.1.5
+slf4jApiVersion=1.7.30
+
+## Serialization
+accessorSmartVersion=2.4.7
+gsonVersion=2.8.9
+jacksonVersion=2.13.4
+jsonSmartVersion=2.4.5
+snakeYamlVersion=1.33
 xerces=2.12.0
+
+## Templating
+freemarkerVersion=2.3.30
 handlebarsVersion=4.3.0
-nettyVersion=4.1.77.Final
-javaxValidationVersion=2.0.1.Final
-javaxActivationVersion=1.1.1
-opentracingSpringWebVersion=4.1.0
-opentracingSpringJaegerStarterVersion=3.3.1
-opentracingJaxrs2Version=1.0.0
-opentracingJdbcVersion=0.2.11
-opentracingAwsSdkVersion=0.1.5
-opentracingGrpcVersion=0.2.3
+jinjavaVersion=2.5.2
+
+## Protobuf
+protobufVersion=3.21.7
+grpcVersion=1.42.1
+
+## Database
+hibernateCoreVersion=5.4.25.Final
 h2databaseVersion=1.3.148
 mybatisMigrationVersion=3.3.9
-gsonVersion=2.8.9
-dnsjavaVersion=2.1.7
-snakeYamlVersion=1.33
-okhttpVersion=3.14.9
-cdpSdkVersion=0.9.51
-jinjavaVersion=2.5.2
+postgreSQLVersion=42.3.7
+
+## Crypto
+bouncycastleVersion=1.70
+
+## Cloudera
+cmClientVersion=7.6.0
+
+## Testing
+assertjVersion=3.21.0
+awaitilityVersion=3.1.6
 hamcrestVersion=2.2
-sonarVersion=3.3
-jsonSmartVersion=2.4.5
-accessorSmartVersion=2.4.7
-protobufVersion=3.19.1
-grpcVersion=1.42.1
-dyngrPollingVersion=1.1.3
+junitVersion=4.13.2
+junitJupiterVersion=5.7.0
+mockitoVersion=3.6.28
+openPojoVersion=0.8.12
+testContainersVersion=1.16.0
+testNgVersion=7.3.0
+
+## Tracing
+micrometerVersion=1.7.6
+opentracingAwsSdkVersion=0.1.5
+opentracingGrpcVersion=0.2.3
+opentracingJaxrs2Version=1.0.0
+opentracingJdbcVersion=0.2.11
+opentracingSpringWebVersion=4.1.0
+opentracingSpringJaegerStarterVersion=3.3.1
+
+## TO REMOVE
+jasyptVersion=1.9.2
+hadoopVersion=2.7.1
 
 # Repo Urls
 repoUrl=https://repo.hortonworks.com/content/repositories/releases/
