--- a/cloud-consumption/build.gradle
+++ b/cloud-consumption/build.gradle
@@ -115,7 +115,7 @@ dependencies {
         implementation     group: 'org.springframework.boot',  name: 'spring-boot-starter-data-jpa',   version: springBootVersion
         testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
     }
-    implementation project(":structuredevent-service-cdp")
+    implementation project(':structuredevent-service-cdp')
     implementation project(':audit-connector')
     implementation project(':authorization-common')
     implementation project(':cloud-reactor-api')
