--- a/cloud-azure/build.gradle
+++ b/cloud-azure/build.gradle
@@ -42,6 +42,10 @@ dependencies {
   }
   implementation 'com.microsoft.azure.marketplaceordering.v2015_06_01:azure-mgmt-marketplaceordering:1.0.0-beta'
 
+  constraints {
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.25.6'
+  }
+
   testImplementation project(path: ':core-model', configuration: 'tests')
   testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter',            version: springBootVersion
   testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
