--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -822,8 +822,8 @@ existing-stack-patcher:
     logging-agent-auto-restart:
       enabled: false
       affected-version-from: 0.2.13
-      date-after: 2019-11-24
-      date-before: 2022-01-18
+      date-after: '2019-11-24'
+      date-before: '2022-01-18'
     logging-agent-auto-restart-v2:
       enabled: false
     disable-region-for-fluentd:
@@ -831,7 +831,7 @@ existing-stack-patcher:
       affected-version-from: 0.2.16
     metering-azure-metadata:
       enabled: false
-      date-before: 2022-01-18
+      date-before: '2022-01-18'
       custom-rpm-url: https://archive.cloudera.com/cp_clients/thunderhead-metering-heartbeat-application-0.1-SNAPSHOT.x86_64.rpm
     cluster-public-endpoint:
       enabled: false
