--- a/integration-test/docker-compose_template.yml
+++ b/integration-test/docker-compose_template.yml
@@ -89,6 +89,7 @@ services:
       - INTEGRATIONTEST_SSHPUBLICKEY
       - INTEGRATIONTEST_UMS_ACCOUNTKEY
       - INTEGRATIONTEST_UMS_HOST
+      - INTEGRATIONTEST_UMS_PORT
       - INTEGRATIONTEST_UMS_DEPLOYMENTKEY
       - INTEGRATIONTEST_UMS_JSONSECRET_VERSION
       - INTEGRATIONTEST_UMS_JSONSECRET_DESTINATIONPATH
