CB-18799 Add mock vertical scaling test, the network was implemented for Environment against Mock provider

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -40,7 +40,7 @@ cdp.structuredevent:
   rest:
     contentlogging: true
 freeipa:
-  verticalScalingSupported: AWS
+  verticalScalingSupported: AWS,MOCK
   cert.dir: /certs/
   client:
     id: freeipa
